syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.donglaistd.jinli";

message KafkaMessage{
  oneof message{
    GameResultMessage gameResultMessage = 1;
  }
}

message GameResultMessage{

}